; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Show.c_scanln_with.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Show.c_scanln_with.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@File = common dso_local global i32 0, align 4
@stdin = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @scanln_with(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* @File, align 4
  %7 = load i32, i32* @stdin, align 4
  %8 = call i32 @"$"(i32 %6, i32 %7)
  %9 = load i32, i32* %5, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @scan_from_with(i32 %8, i32 %9, i8* %10, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* @File, align 4
  %14 = load i32, i32* @stdin, align 4
  %15 = call i32 @"$"(i32 %13, i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @scan_from(i32 %15, i32 %16, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @scan_from_with(i32, i32, i8*, i32) #1

declare dso_local i32 @"$"(i32, i32) #1

declare dso_local i32 @scan_from(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
